plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.mei.hua'
    compileSdk 36

    defaultConfig {
        applicationId "com.mei.hua"
        minSdk 26
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.debug
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

configurations.all {
    resolutionStrategy {
        force 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.6.2'
        force 'androidx.lifecycle:lifecycle-viewmodel:2.6.2'
    }
}

dependencies {
    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    implementation "com.squareup.okhttp3:okhttp:4.9.0"
    implementation 'com.scottyab:rootbeer-lib:0.1.0'
    implementation "dev.rikka.shizuku:api:13.1.5"
    implementation "dev.rikka.shizuku:provider:13.1.5"
}
